--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/html-minifier": "^3.5.3",
     "@types/marked": "^0.6.5",
     "@types/node": "^12.6.3",
+    "@types/recursive-readdir": "^2.2.0",
     "@types/sass": "^1.16.0",
     "concurrently": "^4.1.1",
     "fs-extra": "^8.1.0",
@@ -30,5 +31,8 @@
     "prettier": "^1.18.2",
     "sass": "^1.22.5",
     "typescript": "^3.5.3"
+  },
+  "dependencies": {
+    "recursive-readdir": "^2.2.2"
   }
 }
