--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^12.6.3",
     "@types/recursive-readdir": "^2.2.0",
     "@types/sass": "^1.16.0",
+    "axios": "^0.19.0",
     "concurrently": "^4.1.1",
     "fs-extra": "^8.1.0",
     "html-minifier": "^4.0.0",
