--- a/package.json
+++ b/package.json
@@ -6,32 +6,14 @@
   "author": "Anand Chowdhary <mail@anandchowdhary.com>",
   "license": "MIT",
   "scripts": {
-    "compile": "tsc",
-    "build": "yarn compile && yarn build-site",
-    "build-site": "node dist/build.js",
-    "watch": "onchange 'content/**/*.*' -- yarn build-site",
-    "watch-prettier": "onchange '*.{html,scss,ts,json}' -- prettier --write {{changed}}",
-    "watch-compile": "onchange 'build.ts' -- yarn compile",
+    "build": "@staart/site",
+    "watch": "onchange 'content/**/*.*' -- yarn build",
     "serve": "live-server public --quiet",
-    "start": "concurrently 'yarn watch' 'yarn watch-prettier' 'yarn watch-compile' 'yarn serve'"
+    "start": "concurrently 'yarn watch' 'yarn serve'"
   },
   "devDependencies": {
-    "@types/fs-extra": "^8.0.1",
-    "@types/html-minifier": "^3.5.3",
-    "@types/marked": "^0.6.5",
-    "@types/node": "^12.11.7",
-    "@types/recursive-readdir": "^2.2.0",
-    "@types/sass": "^1.16.0",
-    "axios": "^0.19.0",
     "concurrently": "^5.0.0",
-    "fs-extra": "^8.1.0",
-    "html-minifier": "^4.0.0",
-    "live-server": "^1.2.1",
-    "marked": "^0.7.0",
-    "onchange": "^6.1.0",
-    "prettier": "^1.18.2",
-    "sass": "^1.23.1",
-    "typescript": "^3.6.4"
+    "live-server": "^1.2.1"
   },
   "dependencies": {
     "recursive-readdir": "^2.2.2"
