:wrench: Add Google Site Verification code

--- a/.staartrc
+++ b/.staartrc
@@ -8,5 +8,6 @@
     "[📱 Native](/native)",
     "[🎨 CSS](/css)",
     "[🐱 GitHub](https://github.com/staart)"
-  ]
+  ],
+  "googleSiteVerification": "OaXrIDhMiIOKAvtNjdXsyXM9HPG8BEvN-emVGCfPkeE"
 }
