:wrench: Add SMO info to .staartrc

--- a/.staartrc
+++ b/.staartrc
@@ -9,5 +9,8 @@
     "[🎨 CSS](/css)",
     "[🐱 GitHub](https://github.com/staart)"
   ],
-  "googleSiteVerification": "OaXrIDhMiIOKAvtNjdXsyXM9HPG8BEvN-emVGCfPkeE"
+  "googleSiteVerification": "OaXrIDhMiIOKAvtNjdXsyXM9HPG8BEvN-emVGCfPkeE",
+  "twitterPublisher": "o15y",
+  "twitterCreator": "AnandChowdhary",
+  "seoImage": "https://staart.js.org/assets/smo.png"
 }
