:wrench: Add Google Analytics

--- a/.staartrc
+++ b/.staartrc
@@ -9,6 +9,7 @@
     "[🎨 CSS](/css)",
     "[🐱 GitHub](https://github.com/staart)"
   ],
+  "googleAnalytics": "UA-79176349-16",
   "googleSiteVerification": "OaXrIDhMiIOKAvtNjdXsyXM9HPG8BEvN-emVGCfPkeE",
   "twitterPublisher": "o15y",
   "twitterCreator": "AnandChowdhary",
