--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "concurrently 'yarn watch' 'yarn serve'"
   },
   "devDependencies": {
-    "@staart/site": "1.12.5",
+    "@staart/site": "^1.12.6",
     "concurrently": "^5.0.2",
     "live-server": "^1.2.1"
   },
